[package]
name = "dsp-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.2"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.3"
sea-query = "0.30.7"
sea-query-binder = {version = "0.5.0", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
    "runtime-async-std-rustls"]}
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sqlx = { version = "0.7", features = ["runtime-async-std", "tls-rustls", "postgres", "chrono", "uuid"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
uuid = { version = "1.7", features = ["serde", "v4"] }
