[package]
name = "dsp-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"
regex = "1.10"
sea-query = "0.30"
sea-query-binder = {version = "0.5", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
    "runtime-async-std-rustls"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-async-std", "tls-rustls", "postgres", "chrono", "uuid"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
